--- a/flameshot/flameshot.ini
+++ b/flameshot/flameshot.ini
@@ -2,6 +2,6 @@
 contrastOpacity=188
 contrastUiColor=#000000
 drawColor=#00ffff
-savePath=/home/kyo
+savePath=/home/9ROT7XX
 uiColor=#000000
 undoLimit=99
