Updated: dotfiles (now more minimalistic)

--- a/flameshot/flameshot.ini
+++ b/flameshot/flameshot.ini
@@ -2,6 +2,7 @@
 contrastOpacity=188
 contrastUiColor=#000000
 drawColor=#00ffff
-savePath=/home/kyoto
+savePath=/home/ynv
+showStartupLaunchMessage=false
 uiColor=#000000
 undoLimit=99
