--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,8 +16,6 @@ $color13 = 0xff
 $color14 = 0xff
 $color15 = 0xff
 # Pywal Colors - Auto-generated
-# Pywal Colors - Auto-generated
-# Pywal Colors - Auto-generated
 
 # https://wiki.hyprland.org/Configuring/
 
@@ -327,6 +325,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
+windowrule=noblur,class:^Brave$,title:^()$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
